# rustymon

./: .gitignore  Cargo.toml  README.md  SDL2_ttf.dll:Zone.Identifier  mechanics.md  menus.md  starterinfo.md  storyline.md  strayinfo.md
.cargo/: config.toml
assets/: PressStart2P-Regular.ttf:Zone.Identifier  Sprite-0001.aseprite  concept.aseprite
assets/UI/: moves_menu.aseprite
assets/char-sprites/: astasprite.aseprite
assets/concept-art/: astadesign.ase  battlelayout.aseprite
mapeditor/: index.html  script.js  style.css  tiles.js
maps/demo_map/: collision.txt  floor.txt  objects.txt
maps/map0/: collision.txt  dim.txt  floor.txt  objects.json  objects.txt  walls.txt  walls.txt:Zone.Identifier
maps/map1/: collision.txt  floor.txt  objects.txt  walls.txt
maps/map2/: collision.txt  floor.txt  walls.txt
src/: .gamestate.rs.swp  .gamestate_BASE_6804.rs.swp  .gamestate_LOCAL_6804.rs.swp  .gamestate_REMOTE_6804.rs.swp  bag.rs  constants.rs  coordinate.rs  event.rs  font_manager.rs  gamestate.rs  gamestate_BACKUP_6471.rs  gamestate_REMOTE_6471.rs  humanoid.rs  input.rs  main.rs  menu.rs  npc.rs  object.rs  objects.rs  player.rs  render.rs  resource_manager.rs  texture_manager.rs  tilemap.rs  vec2.rs
src/components/: animation.rs  bag.rs  mod.rs  sprite.rs  stray.rs
src/engine_structures/: collision.rs  components.rs  coordinate.rs  humanoid_properties.rs  mod.rs  updated.rs
src/gamestate/: battle.rs  event.rs  input.rs  updates.rs
src/menu/: bag_menu.rs  battle_select_stray.rs  macros.rs  main_menu.rs  menu_events.rs  mod.rs  moves_menu.rs  textbox.rs  (+2 more)
(+16 files in other folders)
