[package]
name = "rustymon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "ttf"]
